2005-10-01  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/Verify.py: Convert to new API.
	* src/plugins/verify.glade: Use separate windows for errors and
	warnings.
	* src/plugins/Check.py: Convert to new API.
	* src/plugins/DesGraph.py: Use correct constant.
	* src/plugins/Eval.py: Convert to new API.
	* src/plugins/Leak.py: Convert to new API.

2005-09-30  Alex Roitman  <shura@gramps-project.org>
	* src/docgen/KwordDoc.py: Remove unused latin_utf8 import.
	* src/plugins/FilterEditor.py: Convert to new API.
	* src/plugins/DesBrowse.py: Convert to new API.

2005-09-29  Don Allingham  <don@gramps-project.org>
	* src/docgen/AbiWord2Doc.py: fix latin encoding issues
	* src/docgen/KwordDoc.py: fix latin encoding issues
	* src/docgen/OpenSpreadSheet.py: fix latin encoding issues
	* src/plugins/GraphViz.py: fix latin encoding issues
	* src/plugins/DetAncestralReport.py: Fixed generation string
	* src/plugins/DetDescendantReport.py: Fixed generation string

2005-09-29  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/plugins/ExportVCalendar.py: Removed unused code
	* src/plugins/ExportVCard.py: Removed unused code
	* src/plugins/ImportGeneWeb.py: Removed unused code
	* src/plugins/ImportvCard.py: Removed unused code
	* src/plugins/TestcaseGenerator.py: Removed unused code
	* src/plugins/WriteGeneWeb.py: Removed unused code
	
2005-09-29  Don Allingham  <don@gramps-project.org>
	* src/WriteGedcom.py: handle broken family
	* src/ReportUtils.py: fix born_str to not depend on death date
	* example/gedcom/sample.ged: remove broken refererence (I01)

2005-09-29  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/plugins/ImportGeneWeb.py: convert witout using latin_utf8.py
	* src/plugins/ImportvCard.py: remove unused latin_utf8.py include
	* src/plugins/TestcaseGenerator.py: remove unused latin_utf8.py include

2005-09-28  Don Allingham  <don@gramps-project.org>
	* src/NameDisplay.py: Add display_formal
	* src/Report.py: remove generation strings