@@ -837,11 +837,11 @@ class TestcaseGeneratorOptions(Tool.ToolOptions):
         self.options_help = {
             'bugs'          : ("=0/1",
                                 "Whether to create invalid database references.",
-                                ["Valid Datavase","Invalid Database"],
-                                False),
-            'archive'       : ("=0/1",
+                                ["Skip test","Create invalid Database references"],
+                                True),
+            'dates'         : ("=0/1",
                                 "Whether to create test for date handling.",
-                                ["Skip test","Create Date tests"],
+                                ["Skip test","Create date tests"],
                                 True),
             'persons'       : ("=0/1",
                                 "Whether to create a bunch of dummy persons",
@@ -849,13 +849,15 @@ class TestcaseGeneratorOptions(Tool.ToolOptions):
                                 True),
             'person_count'  : ("=int",
                                 "Number of dummy persons to generate",
-                                2000),
+                                "Number of persons"),
             'no_trans'      : ("=0/1",
                                 "Wheter to use one transaction or multiple small ones",
-                                ["One oransaction","Multiple transactions"]),
+                                ["One transaction","Multiple transactions"],
+                                True),
             'long_names'    : ("=0/1",
-                                "Wheter to create sort or long names",
-                                ["Short names","Long names"]),
+                                "Wheter to create short or long names",
+                                ["Short names","Long names"],
+                                True),
         }
 
 #-------------------------------------------------------------------------
