@@ -1,3 +1,6 @@
+2005-10-02  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
+	* src/plugins/TestcaseGenerator.py: corrected options help dict
+
 2005-10-01  Alex Roitman  <shura@gramps-project.org>
 	* src/plugins/Verify.py: Convert to new API.
 	* src/plugins/verify.glade: Use separate windows for errors and
